--- a/HospitalManagementWinform/HospitalManagementWinform.csproj
+++ b/HospitalManagementWinform/HospitalManagementWinform.csproj
@@ -46,16 +46,40 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="Admin staff.cs" />
+    <Compile Include="Clinical history.cs" />
+    <Compile Include="Doctor.cs" />
+    <Compile Include="HospitalPagina.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="HospitalPagina.Designer.cs">
+      <DependentUpon>HospitalPagina.cs</DependentUpon>
     </Compile>
+    <Compile Include="DoctorPagina.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DoctorPagina.Designer.cs">
+      <DependentUpon>DoctorPagina.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GuardarForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GuardarForm.Designer.cs">
+      <DependentUpon>GuardarForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Hospital.cs" />
+    <Compile Include="Patient.cs" />
+    <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="HospitalPagina.resx">
+      <DependentUpon>HospitalPagina.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DoctorPagina.resx">
+      <DependentUpon>DoctorPagina.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GuardarForm.resx">
+      <DependentUpon>GuardarForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
