--- a/HospitalManagementWinform/HospitalManagementWinform.csproj
+++ b/HospitalManagementWinform/HospitalManagementWinform.csproj
@@ -65,11 +65,11 @@
     <Compile Include="DoctorPagina.Designer.cs">
       <DependentUpon>DoctorPagina.cs</DependentUpon>
     </Compile>
-    <Compile Include="GuardarForm.cs">
+    <Compile Include="DoctorForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GuardarForm.Designer.cs">
-      <DependentUpon>GuardarForm.cs</DependentUpon>
+    <Compile Include="DoctorForm.Designer.cs">
+      <DependentUpon>DoctorForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -79,8 +79,8 @@
     <EmbeddedResource Include="DoctorPagina.resx">
       <DependentUpon>DoctorPagina.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="GuardarForm.resx">
-      <DependentUpon>GuardarForm.cs</DependentUpon>
+    <EmbeddedResource Include="DoctorForm.resx">
+      <DependentUpon>DoctorForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PatientPagina.resx">
       <DependentUpon>PatientPagina.cs</DependentUpon>
