--- a/HospitalManagementWinform/HospitalManagementWinform.csproj
+++ b/HospitalManagementWinform/HospitalManagementWinform.csproj
@@ -59,6 +59,18 @@
     <Compile Include="AdminForm.Designer.cs">
       <DependentUpon>AdminForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="AppointmentPage.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AppointmentPage.Designer.cs">
+      <DependentUpon>AppointmentPage.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AppointmentForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AppointmentForm.Designer.cs">
+      <DependentUpon>AppointmentForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="PatientForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -96,6 +108,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AdminPage.resx">
       <DependentUpon>AdminPage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AppointmentForm.resx">
+      <DependentUpon>AppointmentForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AppointmentPage.resx">
+      <DependentUpon>AppointmentPage.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="HospitalPage.resx">
       <DependentUpon>HospitalPage.cs</DependentUpon>
